# elections_monitoring

./: .gitattributes  .gitignore  1_articles_scraping.ipynb  2_sentiment_analysis.ipynb  Makefile  README.md  elections.yaml  pyproject.toml  requirements.txt  requirements.yaml
data/interim/: news.sqlite
elections/: __init__.py  __version__.py  constants.py  data_schemas.py  results_reporting.py  scrape_psd.py  sentiment_analysis.py  utils.py
elections/ddl/: article_sentiments_ddl.sql
elections/main/: 1_articles_scraping.ipynb  2_sentiment_analysis.ipynb  3_results_analysis.ipynb
elections/notebooks/: articles_poc.ipynb  partie_sites_scrape.ipynb  rag_poc.ipynb
elections/notebooks/political_data/psd/: proposals.tsv
elections/prompts/research/: base_texts.md  prompt_3.md  prompt_6.md  prompt_7.md
elections/prompts/templates/: example_1.py  example_2.py  example_3.py  sentiment_template.py  sentiment_template_bkp.py  system_prompt.py  user_prompt.py  utils.py
elections/prompts/validation/: val_1.py
elections/scrapers/: news_scraper.py  psd_scraper.py
elections/tests/: test_data_schemas.py  test_json_format.py  test_llm.py
notebooks/: articles_poc.ipynb  experiments.ipynb  party_sites_scrape.ipynb  rag_poc.ipynb  results_analysis.ipynb  sentiment_analysis.ipynb
src/elections/: constants.py  data_schemas.py  news_scraper.py  results_reporting.py  sentiment_analysis.py  utils.py
src/elections/ddl/: articles_ddl.sql  articles_milvus_ddl.py
src/elections/main/: 1_articles_scraping.ipynb  2_sentiment_analysis.ipynb  3_results_analysis.ipynb  README.md
src/elections/prompts/research/: prompt_1.md  prompt_2.md  prompt_4.md  prompt_5.md
src/elections/prompts/templates/: example_2.py  user_prompt.py  utils.py
src/elections/scrapers/: news_scraper.py
tests/: test_data_schemas.py  test_llm.py  tools.py
