[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "elections"
authors = [
    {name = "Diogo"},
]
description = "Package made to monitor the 2024 portuguese elections"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

[tool.pytest.ini_options]
markers = [
    "openai: marks tests that require the OpenAI API, hence are paid",
]

[tool.setuptools]
# to solve this bug: 
# https://github.com/pypa/setuptools/issues/3197#issuecomment-1078770109
py-modules = []
