[build-system]
requires = ["hatchling >= 1.21.1"]
build-backend = "hatchling.build"

[project]
name = "elections"
authors = [
    {name = "Diogo"},
]
description = "Sentiment analysis of the March 2024 portuguese elections"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

[tool.hatch.version]
path = "src/elections/__about__.py"

[tool.pytest.ini_options]
markers = [
    "openai: marks tests that require the OpenAI API, hence are paid",
]
