[build-system]
requires = ["hatchling >= 1.21.1"]
build-backend = "hatchling.build"

[project]
name = "elections"
authors = [
    {name = "Diogo"},
]
description = "Sentiment analysis of the March 2024 portuguese elections"
readme = "README.md"
requires-python = "==3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "numpy==1.26.2",
    "tqdm==4.66.1",
    "pandas==2.1.1",
    "matplotlib== 3.8.3",
    "seaborn==0.13.2",
    "thefuzz==0.22.1",
    "typing_extensions==4.8.0",
    "pydantic==2.5.2",
    "gnews==0.3.6",
    "unidecode==1.3.8",
    "newspaper3k==0.2.8",
    "instructor==0.6.1",
    "openai==1.12.0",
    "hatchling==1.21.1",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
]

[tool.hatch.version]
path = "src/elections/__about__.py"

[tool.pytest.ini_options]
markers = [
    "openai: marks tests that require the OpenAI API, hence are paid",
]
